--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage":"https://github.io/Nks199721/React-portfolio.git",
-  "name": "portfolio_react",
+  "name": "consistency",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
